feat: 프로젝트 스캐폴딩 및 공통 설정 추가